
- General
  - Added 64-bit support to the NSIS installer script.
  - Some fixes in the build system found by Debian.

- CPU / CPUDB
  - Bugfixes for CPU emulation correctness
    - Many critical bugfixes for Protection Keys, AVX512*, VMX/SVM, SHA, GFNI emulation
  ! Implemented CET (Control Flow Enforcement Technology) emulation according to Intel SDM rev071

- I/O Devices
  - Some fixes in HPET emulation (patch by Oleg)

- BIOS / VGABIOS
  - LGPL'd VGABIOS updated from CVS (Fixed VESA extension 'read EDID' for Bochs
    VBE and Cirrus).
  - Updated SeaBIOS ROM image to current version 1.13.0.
  - Added SeaVGABIOS ROM image for the Cirrus adapter.

-------------------------------------------------------------------------
Changes in 2.6.10 (December 1, 2019):

Brief summary :
  - CPU: Bugfixes for CPU emulation correctness (critical bugfixes for PCID, ADCX/ADOX, MOVBE, AVX/AVX-512 and VMX emulation)
  - CPU: implemented AVX-512 VBMI2/VNNI/BITALG, VAES, VPCLMULQDQ / GFNI instructions emulation
  - VMX: Implement EPT-Based Sub-Page Protection
  - CPUID: Added new CPU models Skylake-X, Cannonlake and Icelake-U
  - CPUID: Implemented side-channel attack prevention reporting and corresponding MSR registers, enabled for Icelake-U
  - Added basic support for the i440BX PCI/AGP chipset.
  - Added basic Voodoo Banshee / Voodoo3 emulation support.
  - Added basic DDC support for the VGA-compatible adapters.
  - Implemented HPET emulation (ported from Qemu).

Detailed change log :

- General
  - Disabled legacy "load32bitOShack" feature.
  - Improved NSIS win32 installer script.

- CPU / CPUDB
  - Significant speedup to simulation of milti-threaded guest (patch by Luigu.B)
  - Bugfixes for CPU emulation correctness (critical bugfixes for PCID, ADCX/ADOX, MOVBE, AVX/AVX-512 and VMX emulation)
  ! x87: implemented FOPCODE and FDP deprecation features
  ! AVX-512: implemented AVX-512 VBMI2/VNNI/BITALG instructions